Created circle trackers instead of messy load bars.

--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -55,158 +55,62 @@
                 spacing: 10
                 cols: 9
 
-                MDBoxLayout:
-                    id: des1
-                    spacing: 10
-                    orientation: "vertical"
+                MDIcon:
+                    id: ind1
+                    theme_text_color: "Custom"
+                    icon: "circle-slice-8"
+                    halign: "center"
 
-                    MDIcon:
-                        id: ind1
-                        text_color: C("FFFFFF")
-                        theme_text_color: "Custom"
-                        icon: "menu-down"
-                        halign: "center"
+                MDIcon:
+                    id: ind2
+                    theme_text_color: "Custom"
+                    icon: "circle-outline"
+                    halign: "center"
 
-                    MDProgressBar:
-                        id: cind1
-                        value: 100
+                MDIcon:
+                    id: ind3
+                    theme_text_color: "Custom"
+                    icon: "circle-outline"
+                    halign: "center"
 
-                MDBoxLayout:
-                    id: des2
-                    spacing: 10
-                    orientation: "vertical"
+                MDIcon:
+                    id: ind4
+                    theme_text_color: "Custom"
+                    icon: "circle-outline"
+                    halign: "center"
 
-                    MDIcon:
-                        id: ind2
-                        opacity: 0
-                        text_color: C("FFFFFF")
-                        theme_text_color: "Custom"
-                        icon: "menu-down"
-                        halign: "center"
+                MDIcon:
+                    id: ind5
+                    theme_text_color: "Custom"
+                    icon: "circle-outline"
+                    halign: "center"
 
-                    MDProgressBar:
-                        id: cind2
-                        value: 100
+                MDIcon:
+                    id: ind6
+                    theme_text_color: "Custom"
+                    icon: "circle-outline"
+                    halign: "center"
 
-                MDBoxLayout:
-                    id: des3
-                    spacing: 10
-                    orientation: "vertical"
+                MDIcon:
+                    id: ind7
+                    theme_text_color: "Custom"
+                    icon: "circle-outline"
+                    halign: "center"
 
-                    MDIcon:
-                        id: ind3
-                        opacity: 0
-                        text_color: C("FFFFFF")
-                        theme_text_color: "Custom"
-                        icon: "menu-down"
-                        halign: "center"
+                MDIcon:
+                    id: ind8
+                    theme_text_color: "Custom"
+                    icon: "circle-outline"
+                    halign: "center"
 
-                    MDProgressBar:
-                        id: cind3
-                        value: 100
+                MDIcon:
+                    id: ind9
+                    theme_text_color: "Custom"
+                    icon: "circle-outline"
+                    halign: "center"
 
-                MDBoxLayout:
-                    id: des4
-                    spacing: 10
-                    orientation: "vertical"
-
-                    MDIcon:
-                        id: ind4
-                        opacity: 0
-                        text_color: C("FFFFFF")
-                        theme_text_color: "Custom"
-                        icon: "menu-down"
-                        halign: "center"
-
-                    MDProgressBar:
-                        id: cind4
-                        value: 100
-
-                MDBoxLayout:
-                    id: des5
-                    spacing: 10
-                    orientation: "vertical"
-
-                    MDIcon:
-                        id: ind5
-                        opacity: 0
-                        text_color: C("FFFFFF")
-                        theme_text_color: "Custom"
-                        icon: "menu-down"
-                        halign: "center"
-
-                    MDProgressBar:
-                        id: cind5
-                        value: 100
-
-                MDBoxLayout:
-                    id: des6
-                    spacing: 10
-                    orientation: "vertical"
-
-                    MDIcon:
-                        id: ind6
-                        opacity: 0
-                        text_color: C("FFFFFF")
-                        theme_text_color: "Custom"
-                        icon: "menu-down"
-                        halign: "center"
-
-                    MDProgressBar:
-                        id: cind6
-                        value: 100
-
-                MDBoxLayout:
-                    id: des7
-                    spacing: 10
-                    orientation: "vertical"
-
-                    MDIcon:
-                        id: ind7
-                        opacity: 0
-                        text_color: C("FFFFFF")
-                        theme_text_color: "Custom"
-                        icon: "menu-down"
-                        halign: "center"
-
-                    MDProgressBar:
-                        id: cind7
-                        value: 100
-
-                MDBoxLayout:
-                    id: des8
-                    spacing: 10
-                    orientation: "vertical"
-
-                    MDIcon:
-                        id: ind8
-                        opacity: 0
-                        text_color: C("FFFFFF")
-                        theme_text_color: "Custom"
-                        icon: "menu-down"
-                        halign: "center"
-
-                    MDProgressBar:
-                        id: cind8
-                        value: 100
-
-                MDBoxLayout:
-                    id: des9
-                    spacing: 10
-                    orientation: "vertical"
-
-                    MDIcon:
-                        id: ind9
-                        opacity: 0
-                        text_color: C("FFFFFF")
-                        theme_text_color: "Custom"
-                        icon: "menu-down"
-                        halign: "center"
-
-                    MDProgressBar:
-                        id: cind9
-                        value: 100
-
+        MDBoxLayout:
+            size_hint: 1, 0.5
         MDBoxLayout:
         MDBoxLayout:
         MDBoxLayout:
