--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -14,8 +14,8 @@
             title: "C0de.Net"
 
         MDStackLayout:
-            spacing: 20
-            padding: 20
+            spacing: 10
+            padding: 21
 
             MDLabel:
                 adaptive_height: True
@@ -23,8 +23,10 @@
                 theme_text_color: "Custom"
                 font_style: "H4"
                 text: "Welcome"
-                underline: True
                 halign: "center"
+
+            MDSeparator:
+                color: C("FFFFFF")
 
             MDLabel:
                 adaptive_height: True
