--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -15,8 +15,8 @@
             right_action_items: [["refresh", lambda x: root.refresh()]]
 
         MDStackLayout:
-            spacing: 20
-            padding: 20
+            spacing: 10
+            padding: 21
 
             MDLabel:
                 adaptive_height: True
@@ -25,7 +25,9 @@
                 font_style: "H4"
                 text: "Player Amount"
                 halign: "center"
-                underline: True
+
+            MDSeparator:
+                color: C("FFFFFF")
 
             MDLabel:
                 adaptive_height: True
