Completed optimization. Removes pointless modules from being loaded when not in use within the main app.

--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -150,6 +150,7 @@
 
         MDBottomAppBar:
             MDToolbar:
+                id: revtool
                 icon: "square-rounded-outline"
                 type: "bottom"
                 on_action_button: app.on_pause()
